[workspace]
members = [
    "programs/*",
    "crank"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
savings-program = { path = "programs/savings-program", features = ["no-entrypoint"] }
solana-account-decoder = "1.16"
solana-client = "1.16"
solana-program-test = "1.16"
solana-sdk = "1.16"
tokio = "1.35.0"
