[package]
name = "crank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
solana-client = "1.17.10"
tokio = "1.35.0"
savings-program = { path = "../programs/savings-program" }
solana-sdk = "1.17.10"
anchor-lang = "0.29.0"
solana-account-decoder = "1.17.10"
anchor-spl = "0.29.0"
