[package]
name = "crank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
solana-client = {workspace = true}
savings-program = {workspace = true}
solana-sdk = {workspace = true}
solana-account-decoder = {workspace = true}
tokio = {workspace = true}
