[package]
name = "savings-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "savings_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {workspace = true}
anchor-spl = {workspace = true}

[dev-dependencies]
solana-sdk = {workspace = true}
solana-program-test = {workspace = true}
spl-associated-token-account = "1.0.3"
thiserror = "1.0.50"
